--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    background-color: rgb(73, 95, 110);
+    background-color: rgb(192, 194, 196);
     padding: 15px;
 }
 
@@ -30,9 +30,9 @@ p {
 }
 
 main img {
-    width: 150px;
+    width: 200px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid rgb(197, 200, 202);
     padding: 1px;
     float: right;
     margin: 0 0 1rem 1rem;
@@ -42,7 +42,7 @@ aside {
     width: 15em;
     text-align: center;
     position: relative;
-    background-color: beige;
+    background-color: rgb(248, 248, 246);
 }
 
 aside img {
@@ -69,6 +69,6 @@ footer {
     border: 1rem solid rgb(0, 0, 0 / 10%);
     padding: 20px;
     color: rgb(32, 32, 32);
-    background-color: beige;
+    background-color: rgb(248, 248, 248);
 
 }
